long forgotten changes

--- a/procrastination/main.css
+++ b/procrastination/main.css
@@ -8,10 +8,47 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    display: none;
     /*will-change: transform;*/
 }
 
 #set-height {
     display: block;
     height: 13500px;
+}
+
+#maintitle {
+    z-index: 100;
+    margin-left: auto;
+    margin-right: auto;
+    width: 17em;
+    font-family: Arial;
+    display: block;
+	/*-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;*/
+	/*        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;*/
+}
+
+@-webkit-keyframes text-focus-in {
+    0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
+    }
+    @keyframes text-focus-in {
+        0% {
+        -webkit-filter: blur(12px);
+        filter: blur(12px);
+        opacity: 0;
+    }
+    100% {
+        -webkit-filter: blur(0px);
+        filter: blur(0px);
+        opacity: 1;
+    }
 }
