--- a/firstcondition/firstcond/templates/english.html
+++ b/firstcondition/firstcond/templates/english.html
@@ -1,1 +1,9 @@
-english, template
+{% extends "base.html" %}
+
+{% block description %}
+An art game about magic and politics. Controls: WASD + mouse.
+{% endblock %}
+
+{% block helper %}
+Please allow access to your web camera for better experience. We are not recording your image.
+{% endblock %}
