--- a/firstcondition/firstcond/templates/russian.html
+++ b/firstcondition/firstcond/templates/russian.html
@@ -1,1 +1,9 @@
-russian template
+{% extends "base.html" %}
+
+{% block description %}
+Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад.
+{% endblock %}
+
+{% block helper %}
+Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
+{% endblock %}
