--- a/firstcondition/firstcond/templates/english.html
+++ b/firstcondition/firstcond/templates/english.html
@@ -7,3 +7,5 @@ An art game about magic and politics. Controls: WASD + mouse.
 {% block helper %}
 Please allow access to your web camera for better experience. We are not recording your image.
 {% endblock %}
+
+{% block credits %}In game we have used 3D-modes: sketchfab.com, sounds: freesound.org and stableaudio.com{% endblock %}
