--- a/firstcondition/firstcond/templates/russian.html
+++ b/firstcondition/firstcond/templates/russian.html
@@ -7,3 +7,5 @@
 {% block helper %}
 Для лучшего опыта нужно разрешить доступ для веб-камеры. Мы не транслируем и не записываем ваше изображение.
 {% endblock %}
+
+{% block credits %}В игре были использованы: 3D-модели: sketchfab.com, sound: freesound.org и stableaudio.com{% endblock %}
