--- a/firstcondition/firstcond/templates/base.html
+++ b/firstcondition/firstcond/templates/base.html
@@ -37,7 +37,7 @@
 <div class="px-4 py-5 my-1 text-center bg-body-secondary rounded object-fit-contain"
      style="height: 770px;  background-repeat: repeat; background-image: url('/firstcondition/img/SMPTE_Color_Bars.svg');"
      id="game">
-    <h1 class="{% if lang == 'english' %}display-14{% else %}display-10{% endif %} fw-bold text-white text-body-emphasis">{{ title }}</h1>
+    <h1 class="{% if lang == 'english' %}display-14{% else %}display-10{% endif %} fw-bold text-white text-body-emphasis maintitle">{{ title }}</h1>
     <div class="col-lg-6 mx-auto">
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">{% block description %}{% endblock %}</p>
         <p class="lead mb-2 text-body-emphasis text-bg-vsrato">{% block helper %}{% endblock %}</p>
