--- a/firstcondition/scss/custom.scss
+++ b/firstcondition/scss/custom.scss
@@ -23,6 +23,18 @@ $custom-font-sizes: (
 );
 $display-font-sizes: map-merge($display-font-sizes, $custom-font-sizes);
 
+.maintitle {
+  text-shadow:
+      0 0 7px #fff,
+      0 0 10px #fff,
+      0 0 21px #fff,
+      0 0 42px #0fa,
+      0 0 82px #0fa,
+      0 0 92px #0fa,
+      0 0 102px #0fa,
+      0 0 151px #0fa;
+}
+
 // 5. Include remainder of required parts
 @import "../node_modules/bootstrap/scss/maps";
 @import "../node_modules/bootstrap/scss/mixins";
