--- a/firstcondition/css/custom.css
+++ b/firstcondition/css/custom.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .maintitle {
-  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #0fa, 0 0 82px #0fa, 0 0 92px #0fa, 0 0 102px #0fa, 0 0 151px #0fa;
+  text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #40ff00, 0 0 82px #40ff00, 0 0 92px #40ff00;
 }
 
 :root,
