--- a/firstcondition/scss/custom.scss
+++ b/firstcondition/scss/custom.scss
@@ -28,11 +28,11 @@ $display-font-sizes: map-merge($display-font-sizes, $custom-font-sizes);
       0 0 7px #fff,
       0 0 10px #fff,
       0 0 21px #fff,
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px #0fa,
-      0 0 151px #0fa;
+      0 0 42px #40ff00,
+      0 0 82px #40ff00,
+      0 0 92px #40ff00;
+      //0 0 102px #e600ff;
+      //0 0 151px #e600ff;
 }
 
 // 5. Include remainder of required parts
