add phrase about mobile version

--- a/firstcondition/firstcond/templates/english.html
+++ b/firstcondition/firstcond/templates/english.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block description %}
-An art game about magic and politics. Controls: WASD + mouse.
+An art game about magic and politics. Controls: WASD + mouse. The game will not run on mobile devices.
 {% endblock %}
 
 {% block helper %}
