--- a/firstcondition/firstcond/templates/russian.html
+++ b/firstcondition/firstcond/templates/russian.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block description %}
-Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад.
+Арт-игра о магии и политике. Управление: WASD. Обзор: мышь/тачпад. Мобильные устройства пока не поддерживаются.
 {% endblock %}
 
 {% block helper %}
