--- a/firstcondition/firstcond/templates/english.html
+++ b/firstcondition/firstcond/templates/english.html
@@ -9,3 +9,5 @@ Please allow access to your web camera for better experience. We are not recordi
 {% endblock %}
 
 {% block credits %}In game we have used 3D-modes: sketchfab.com, sounds: freesound.org and stableaudio.com{% endblock %}
+
+{% block feedback %}Feedback form{% endblock %}
