--- a/firstcondition/firstcond/templates/russian.html
+++ b/firstcondition/firstcond/templates/russian.html
@@ -9,3 +9,5 @@
 {% endblock %}
 
 {% block credits %}В игре были использованы: 3D-модели: sketchfab.com, sound: freesound.org и stableaudio.com{% endblock %}
+
+{% block feedback %}Связаться{% endblock %}
