--- a/firstcondition/firstcond/templates/base.html
+++ b/firstcondition/firstcond/templates/base.html
@@ -135,7 +135,8 @@
 </div>
 <footer class="py-3 my-4">
     <ul></ul>
-    <p class="text-center text-muted" >© 2023 Art-group მმმ / Mad hutter game production plant: Valery Belov, Marina Blinova, Alexey Boriskin. </p>
+    <p class="text-center text-muted">© 2023 Art-group მმმ / Game production plant: <a href="https://www.instagram.com/valergenadich/" class="link-light" target="_blank">Valery Belov</a>,
+        <a href="https://www.instagram.com/th_c_d/" class="link-light" target="_blank">Marina Blinova</a>, <a href="https://www.instagram.com/voidus/" class="link-light" target="_blank">Alexey Boriskin</a>.</p>
     <p class="text-center text-muted">{% block credits %}{% endblock %}</p>
 </footer>
 </body>
