--- a/firstcondition/firstcond/templates/base.html
+++ b/firstcondition/firstcond/templates/base.html
@@ -49,63 +49,8 @@
         <div class="col-md-8">
             <h3 class="pb-4 mb-4 border-bottom">{{ title }}</h3>
             <article class="blog-post">
-                <p>Мы наблюдаем за изменением подхода к новогоднему поздравлению владимира путина в декабре 22 года по
-                    сравнению с предыдущей традицией новогодних поздравлений. До 22 года поздравление было выстроено по
-                    классическому канону: в кадре было тело президента и символы государственной власти - куранты,
-                    кремль, флаг,
-                    гимн, спасская башня. Эта традиция означала бесконечное повторение настоящего через обращение и
-                    эксплуатацию
-                    прошлого: мелодии советского гимна, советской традиции поздравлений генсеков, царского имперского
-                    герба с
-                    двуглавым орлом. В 22 году, году начала полномасштабного вторжения россии в украину, произошёл слом,
-                    в том
-                    числе и властных ритуалов – новогоднее обращение было записано на фоне людей в форме. Обращаясь к
-                    теории
-                    "двух тел короля", нам кажется, что тело властное, идеологическое окончательно обветшало и
-                    обнаружило свою
-                    пустотность, стало призраком.
-                </p>
-                <p>
-                    Отсюда стремление путина закрепиться в теле "обычном", размножив его в иных телах. Мы видим это как
-                    переход
-                    от символической власти к власти телесной, что подтверждается также репрессиями в отношении
-                    транс-персон,
-                    лгбт-сообщества, постепенным введением запрета абортов, возвращением спортивных парадов на красную
-                    площадь -
-                    то есть в целом возвращении фукольдианской биовласти. Мы хотели бы рассмотреть этот переход от
-                    символической
-                    власти к телесной через оптику хонтологии, науки призраков. На наш взгляд, мы имеем дело с двумя
-                    призраками:
-                    с призраком бесконечно продолжающегося настоящего через эксплуатацию прошлого, связанным с
-                    предыдущей
-                    традицией тела-курантов, и с призраком (якобы) вечно живого тела, которое пытается зацепиться за
-                    иные тела в
-                    попытке отменить или отсрочить собственную смерть, обращаясь к телесной биовласти.
-                </p>
-                <p>
-                    В призраках власти "Деррида" называет два основных способа изгнания призраков: экзорцизм в прошлое и
-                    проекция в
-                    будущее. Первый
-                    подразумевает объявление призрака не более чем иллюзией/воспоминанием. Второй же принимает призрака
-                    как
-                    конкретный план, нечто, подлежащее воплощению; призрак рассеивается, когда задание выполнено.
-                    Предоставляя
-                    набор абстрактных магических артефактов, мы не даём зрителю конкретных указаний, как именно можно
-                    призвать
-                    призрак смерти, но предлагаем поверить, что это возможно.
-
-
-                    Нам нужно изгнать призрака прошлого чтобы призракологическая традиция фальсификации настоящего не
-                    повторялась и не давала индульгенцию призраку будущего
-
-                    мы не даём зрителю конкретных указаний, однако в этом магическом ритуале существует некоторая
-                    комбинация
-                    предметов, которая позволяет выполнить необходимое по деррида условие при котором задание будет
-                    выполнено. возможно некоторые иные случайности и развилки в постсоветской истории " могли бы
-                    прервать
-                    повторение, а
-                    возможно необходим иной ход.
-                </p>
+                {% block text %}
+                {% endblock %}
             </article>
         </div>
         <div class="col-md-4">
