--- a/firstcondition/firstcond/templates/english.html
+++ b/firstcondition/firstcond/templates/english.html
@@ -11,3 +11,24 @@ Please allow access to your web camera for better experience. We are not recordi
 {% block credits %}In game we have used 3D-modes: sketchfab.com, sounds: freesound.org and stableaudio.com{% endblock %}
 
 {% block feedback %}Feedback form{% endblock %}
+
+{% block text %}
+<p>
+    In 2022, there is a radical change in an approach Valimir Putin presents himself at New Year's greetings. Before 2022, the greeting, a very important symbolic ritual, was set according to a classic canon. There was the Kremlin Clock, the Kremlin, flag, the national anthem, and the Moscow Clock Tower. This tradition meant an infinite repetition of the present through exploitation of the past: the melody of the anthem, soviet tradition of New Year's greetings by Secretary Generals, double-headed eagle of the Tsarist Russian Empire. In 2022, the year of the russian full-scale invasion into Ukraine, there was a rupture in everything, including rituals of power: the New Year's greetings were recorded in front of the people in military uniform. Later it was found that they were not actual soldiers, but rather Federal Protective Service officers, but that fact remained hidden from the wider audience.
+</p>
+<p>
+    In this context, we want to refer to The King's Two Bodies theory. It seems that the <em>body politic</em> of Vladimir Putin is decaying and revealing its hollowness, becoming a specter.
+</p>
+<p>
+    Hence Putin's pursuit to secure himself in <em>body natural</em>, multiplying it in others' bodies. We see it as the transition from the symbolic power to the bodily power, as it can be confirmed by repressions towards transpersons and LGBT community as a whole, gradual prohibition of abortions, return of athletes parades on the Red Square. All of that can be described as the return of Foucauldian biopower. Considering this transition from symbolic power to the biopower through the lens of hauntology, we deal with the two specters: the specter of infinitely continuing present through the exploitation of the past, and the specter of preudo-eternal living body, which tries to hang on other's bodies in the attempt to cancel or postpone its own death.
+</p>
+<p>
+    In "Specters of Marx" Derrida names two main ways of exorcizing ghosts: exorcism into the past and projection into the future, without specifying which one of them is sufficient.
+</p>
+<p>
+    From our point of view, the specter of the future bloody corporality doesn't have an independent essence, but embodies another way of prolongation of the specter of the past, which produces an endless present due to the exploitation of the future. However, it is at this moment of rupture that you can catch the chimera by the tail and break the repetition function, looping it on itself.
+</p>
+<p>
+    In the magic training simulator we provide a set of abstract artifacts where you can look for forks in the past that would lead somewhere else. But we also provide enough tools for the ideological body to reveal its hollowness.
+</p>
+{% endblock %}
