--- a/firstcondition/firstcond/templates/russian.html
+++ b/firstcondition/firstcond/templates/russian.html
@@ -11,3 +11,21 @@
 {% block credits %}В игре были использованы: 3D-модели: sketchfab.com, sound: freesound.org и stableaudio.com{% endblock %}
 
 {% block feedback %}Связаться{% endblock %}
+
+{% block text %}
+<p>
+	В декабре 22 года изменился подход к новогоднему поздравлению Владимира Путина по сравнению с предыдущей традицией новогодних поздравлений. До 22 года поздравление было выстроено по классическому канону: в кадре было тело президента и символы государственной власти - куранты, кремль, флаг, гимн, спасская башня. Эта традиция означала бесконечное повторение настоящего через обращение и эксплуатацию прошлого: мелодии советского гимна, советской традиции поздравлений генсеков, царского имперского герба с двуглавым орлом. В 22 году, году начала полномасштабного вторжения россии в украину, произошёл слом в том числе и властных ритуалов – новогоднее обращение было записано на фоне людей в форме. Обращаясь к теории "двух тел короля", нам кажется, что тело властное, идеологическое окончательно обветшало и обнаружило свою пустотность, стало призраком.
+</p>
+<p>
+	Отсюда стремление Путина закрепиться в теле "обычном", размножив его в иных телах. Мы видим это как переход от символической власти к власти телесной, что подтверждается также репрессиями в отношении транс-персон, лгбт-сообщества в целом, постепенным введением запрета абортов, возвращением спортивных парадов на красную площадь - то есть в целом возвращении фукольдианской биовласти. Рассматривая этот переход от символической власти к телесной через оптику хонтологии (призракологии), мы имеем дело с двумя призраками: с призраком бесконечно продолжающегося настоящего через эксплуатацию прошлого, связанным с предыдущей традицией тела-курантов, и с призраком (якобы) вечно живого тела, которое пытается зацепиться за иные тела в попытке отменить или отсрочить собственную смерть.
+</p>
+<p>
+	В "Призраках Маркса" Деррида называет два основных способа изгнания призраков: экзорцизм в прошлое и проекция в будущее, не уточняя, является ли один из них достаточным.
+</p>
+<p>
+	С нашей точки зрения, призрак будущей кровавой телесности не имеет самостоятельной сущности, а является иным способом продолжения призрака прошлого, продуцирующего бесконечное настоящее за счёт эксплуатации будущего. Тем не менее, именно на этом моменте разлома можно поймать химеру за хвост, и сломать функцию повторения, зациклив её на себя.
+</p>
+<p>
+	В магическом тренажёре мы предоставляем набор абстрактных артефактов, где можно поискать развилки прошлого, которые бы привели куда-то ещё. Но также даём и достаточное количество инструментов, чтобы идеологическое тело обнаружило свою пустотность.
+</p>
+{% endblock %}
