--- a/firstcondition/firstcond/templates/base.html
+++ b/firstcondition/firstcond/templates/base.html
@@ -57,23 +57,24 @@
             <ul class="list-unstyled">
                 <li>
                     <div class="ratio ratio-16x9">
-                        <iframe class="embe" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0"
-                                allowfullscreen></iframe>
+                        <iframe class="embed" src="https://www.youtube.com/embed/qnE0kStb66o?rel=0"  allowfullscreen></iframe>
                     </div>
                 </li>
+                {% for i in '521'|make_list %}
                 <li>
                     <img class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#pic1"
-                         src="https://img.itch.zone/aW1hZ2UvMTE4OTc0OC82OTM5NzQxLmpwZw==/794x1000/Mv92%2BI.jpg">
-                    <div class="modal fade" id="pic1" aria-hidden="true" tabindex="-1">
+                         src="/firstcondition/img/stop{{i}}.png">
+                    <div class="modal fade" id="pic1" aria-hidden="true" tabindex="-1" style="width: 1200px;">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-body">
-                                    <img class="img-fluid" src="https://img.itch.zone/aW1hZ2UvMTE4OTc0OC82OTM5NzQxLmpwZw==/794x1000/Mv92%2BI.jpg">
+                                    <img class="img-fluid" src="/firstcondition/img/stop{{i}}.png">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
