--- a/firstcondition/firstcond/templates/base.html
+++ b/firstcondition/firstcond/templates/base.html
@@ -66,7 +66,7 @@
             <ul class="list-unstyled">
                 <li>
                     <div class="ratio ratio-16x9">
-                        <iframe class="embed" src="https://www.youtube.com/embed/qnE0kStb66o?rel=0"  allowfullscreen></iframe>
+                        <iframe class="embed" src="https://www.youtube.com/embed/D0d7Vbuam74?rel=0"  allowfullscreen></iframe>
                     </div>
                 </li>
                 {% for i in '521'|make_list %}
