--- a/firstcondition/firstcond/templates/english.html
+++ b/firstcondition/firstcond/templates/english.html
@@ -32,3 +32,5 @@ Please allow access to your web camera for better experience. We are not recordi
     In the magic training simulator we provide a set of abstract artifacts where you can look for forks in the past that would lead somewhere else. But we also provide enough tools for the ideological body to reveal its hollowness.
 </p>
 {% endblock %}
+
+{% block rungame %}Run game{% endblock %}
