--- a/firstcondition/firstcond/templates/russian.html
+++ b/firstcondition/firstcond/templates/russian.html
@@ -29,3 +29,5 @@
 	В магическом тренажёре мы предоставляем набор абстрактных артефактов, где можно поискать развилки прошлого, которые бы привели куда-то ещё. Но также даём и достаточное количество инструментов, чтобы идеологическое тело обнаружило свою пустотность.
 </p>
 {% endblock %}
+
+{% block rungame %}Запустить игру{% endblock %}
